chore: advances in the introduction

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -1,3 +1,67 @@
+
+#------------Introduction----------------
+ @article{Tobin_Reed_Windley_Foundation_2017,
+  title    = {The Inevitable Rise of Self-Sovereign Identity},
+  author   = {Tobin, Andrew and Reed, Drummond and Windley, Foreword Phillip J and Foundation, Sovrin},
+  year     = {2017},
+  pages    = {24},
+  language = {en}
+}
+
+# Laws of Identity
+
+ @misc{macinnis_2019,
+  title   = {A brief history of the password and why it matters},
+  url     = {https://blog.hidglobal.com/2019/08/brief-history-password-why-it-matters},
+  journal = {HID Global Blog},
+  author  = {MacInnis, John},
+  year    = {2019},
+  month   = {Aug}
+} 
+
+# Facebook Data breach
+ @misc{holmes_2021,
+  title     = {533 million facebook users' phone numbers and personal data have been leaked online},
+  url       = {https://www.businessinsider.com/stolen-data-of-533-million-facebook-users-leaked-online-2021-4},
+  journal   = {Business Insider},
+  publisher = {Business Insider},
+  author    = {Holmes, Aaron},
+  year      = {2021},
+  month     = {Apr}
+} 
+
+# Data is the new oil
+ @misc{parkins_2017,
+  title     = {The world's most valuable resource is no longer oil, but Data},
+  url       = {https://www.economist.com/leaders/2017/05/06/the-worlds-most-valuable-resource-is-no-longer-oil-but-data},
+  journal   = {The Economist},
+  publisher = {The Economist Newspaper},
+  author    = {Parkins, David},
+  year      = {2017},
+  month     = {May}
+} 
+
+# Federated login
+@article{1556498,
+  author  = {Shim, S.S.Y. and Geetanjali Bhalla and Vishnu Pendyala},
+  journal = {Computer},
+  title   = {Federated identity management},
+  year    = {2005},
+  volume  = {38},
+  number  = {12},
+  pages   = {120-122},
+  doi     = {10.1109/MC.2005.408}
+}
+
+# The path to SSI
+ @misc{allen_2016,
+  url     = {http://www.lifewithalacrity.com/2016/04/the-path-to-self-soverereign-identity.html},
+  journal = {The Path to Self-Sovereign Identity},
+  author  = {Allen, Christopher},
+  year    = {2016},
+  month   = {Apr}
+} 
+
 ## Social Web Working Group
 
 @misc{celik_prodromou_le_hors_2014,
