--- a/Thesis/content/05_evaluation.tex
+++ b/Thesis/content/05_evaluation.tex
@@ -19,9 +19,8 @@ The current implementation of Mastodon relies on the Webfinger protocol, which i
 By integrating ledger-based DIDs, this dependency on Webfinger and the DNS was only partially removed. Resolving a DID does not require the DNS to be successful. However, the service endpoint in the DID document still includes the domain of the Mastodon instance where it resides. To retrieve the actor object of the user being looked up, an HTTP GET request to the service endpoint is necessary. This means that a DNS resolution will still take place. On the contrary, the approach of the coauthors of ActivityPub and the DIDs mentioned in \ref{sec:extending_activitypub} completely removes the DNS dependency by using The Router Onion or \emph{Tor} to host the ActivityPub server \cite{webber_sporny_2017}. This indicates that if Mastodon were running in a DNS-free space, the design would achieve a fully-decentralized resolving process. 
  
 \subsection{Identity Management}
-Mastodon creates accounts for users using basic password authentication. A federated way to create an account using a third party like \emph{Google} or \emph{Facebook} has not been implemented. Further attempts to improve identity verification have been made, such as using \emph{Keybase}\footnote{https://keybase.io} to \emph{verify} the account. Keybase offers a platform that allows prooving ownership of a social network account, like Twitter or Reddit, with the help of public key cryptography. However, this functionality was removed soon after Zoom\footnote{https://zoom.us} bought it in 2020. According to Mastodon's founder, a user could still use any name in Keybase, and it was still unclear if this person was whom she said she was \cite{rochko_2020}.
 
-As mentioned in \ref{subsec:mastodon}, Mastodon uses basic password authentication to create accounts. With this, the account is restricted to this specific server. The user has no other way to register to a different server, and the identity lives as long as the instance keeps running. On the contrary, in the proposed design, the use of DIDs brings an SSI approach where the user creates his identity independently from Mastodon. In the design, the DIDs are anchored to a test network of Ethereum. Consequently, their existence and validity will persist even if the Mastodon instance ceases to exist, eliminating the \emph{single-point-of-failure} of the identity itself. On the downside, as proved in this thesis, modifying a DID document can present complications depending on the DID method. Modifications could also imply costs when not using test blockchain networks. All of this presents extra overhead for the average user, reducing the usability of such a design. 
+As mentioned in \ref{cha:introduction}, Mastodon uses basic password authentication to create accounts. With this, the account is restricted to this specific server. The user has no other way to register to a different server, and the identity lives as long as the instance keeps running. On the contrary, in the proposed design, the use of DIDs brings an SSI approach where the user creates his identity independently from Mastodon. In the design, the DIDs are anchored to a test network of Ethereum. Consequently, their existence and validity will persist even if the Mastodon instance ceases to exist, eliminating the \emph{single-point-of-failure} of the identity itself. On the downside, as proved in this thesis, modifying a DID document can present complications depending on the DID method. Modifications could also imply costs when not using test blockchain networks. All of this presents extra overhead for the average user, reducing the usability of such a design. 
 
 \section{Security}
 Mastodon implemented HTTP Signatures to add non-repudiation and preserve integrity against tampering to the messages sent within the federation. This approach fulfills the same goals as the JWS token used in the proposed design. Both methods follow the same idea and use public key cryptography to perform the signature. Furthermore, the same key generation algorithm is being used by both. Nonetheless, the downside of HTTP signatures is that they are limited to the HTTP protocol, whereas the JWS has no constraints. 
